# openbb-api

./: CHANGELOG.md  LICENSE  flake.nix  hie.yaml  openbb-api.cabal
src/: API.hs  OpenBBAPI.hs
src/Web/Data/OpenBB/: API.hs
