cabal-version:      3.0
name:               openbb-api
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Alojzy Leszcz
maintainer:         aleszcz@pm.me
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  OpenBBAPI

    build-depends:    base           >= 4.18   && < 4.19,
                      aeson          >= 2.2.3  && < 2.3,
                      http-client    >= 0.7.18 && < 0.8,
                      servant        >= 0.20.2 && < 0.21,
                      servant-client >= 0.20.2 && < 0.21,
                      text           >= 2.0.2  && < 2.1
    hs-source-dirs:   src
    default-language: Haskell2010