cabal-version:      3.0
name:               openbb-api
version:            0.1.0.2
description:
    TBA
bug-reports:        https://github.com/bratfizyk/stooq-api/issues
license:            MIT
license-file:       LICENSE
author:             Alojzy Leszcz
maintainer:         aleszcz@pm.me
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

Source-repository head
  type:     git
  location: https://github.com/bratfizyk/openbb-api

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Web.Data.OpenBB.API

    build-depends:    base           >= 4.18   && < 4.19,
                      aeson          >= 2.1.2  && < 2.2,
                      http-client    >= 0.7.17 && < 0.8,
                      servant        >= 0.20.1 && < 0.21,
                      servant-client >= 0.20   && < 0.21,
                      text           >= 2.0.2  && < 2.1
    hs-source-dirs:   src
    default-language: Haskell2010